@startuml

PdmObject <|-- RimPlotCellFilter


class RimPlotCellFilter
{
    void updateCellVisibilityFromFilter(size_t timeStepIndex,
    cvf::UByteArray* cellVisibility)
    
    FilterModeType filterMode() const;
}

RimPlotCellFilter <|-- RimPlotCellPropertyFilter
RimPlotCellFilter <|-- RimPlotCellFilterCollection

RimPlotCellFilterCollection -> RimPlotCellFilter
class RimPlotCellFilterCollection
{
  std::vector<RimCellFilter*> m_filters
}

RimPlotCellFilter <|-- RimPlotCellRegionFilter_planned
RimPlotCellFilter <|-- RimPlotCellRangeFilter_planned


@enduml
